k8s/00-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toggle-master
