k8s/01-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      serviceAccountName: togglemaster-sa
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
      - name: auth-service
        image: 735355200877.dkr.ecr.us-east-1.amazonaws.com/auth-service:31397738404cae10fef670f5c5679284cc37f38e
        resources:
          requests:
            cpu: "250m"    
            memory: "128Mi"
          limits:
            cpu: "500m"   
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 2   
        ports:
        - name: http 
          containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: toggle-master
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 80          # Porta do Cluster
      targetPort: 8001  # Porta do Container
