k8s/03-targeting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      serviceAccountName: togglemaster-sa
      containers:
      - name: targeting-service
        image: 848779020010.dkr.ecr.us-east-1.amazonaws.com/targeting-service:c6d9d6179c04ded55e8ec6d799dcd83817f7b1b8
        resources:
          requests:
            cpu: "250m"    
            memory: "128Mi"
          limits:
            cpu: "500m"   
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 2   
        ports:
        - name: http 
          containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: toggle-master
spec:
  type: ClusterIP
  selector:
    app: targeting-service
  ports:
    - port: 80
      targetPort: 8003
