k8s/04-evaluation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: togglemaster-sa
      containers:
      - name: evaluation-service
        image: 848779020010.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:d95b916964537ec2598ee908a3b1aa679c2967d4
        resources:
          requests:
            cpu: "250m"    
            memory: "128Mi"
          limits:
            cpu: "500m"   
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 2    
        ports:
        - name: http 
          containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 80
      targetPort: 8004
