k8s/05-analytics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: togglemaster-sa
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
      - name: analytics-service
        image: 211797838481.dkr.ecr.us-east-1.amazonaws.com/analytics-service:latest
        resources:
          requests:
            cpu: "250m"   
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 2
        ports:
        - name: http 
          containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: toggle-master
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 8005
